10-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: hass
spec: {}
status: {}
