40-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hass
  name: hass
  namespace: hass
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hass
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hass
    spec:
      containers:
      - image: homeassistant/home-assistant:0.110.1
        name: home-assistant
        command: ['hass', '-c', '/config']
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        # startupProbe:
        #   httpGet:
        #     path: /
        #     port: http
        #     scheme: HTTP
        #   initialDelaySeconds: 30
        #   failureThreshold: 20
        #   periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          failureThreshold: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          failureThreshold: 20
          timeoutSeconds: 5
        resources: {}
        volumeMounts:
          - mountPath: /config
            name: config-volume
          - mountPath: /config/.storage
            name: hass-config
          - name: hass-secrets
            mountPath: /config/secrets.yaml
            subPath: secrets.yaml
          - name: hass-secrets
            mountPath: /config/webostv.conf
            subPath: webostv.conf
          # - mountPath: /usr/src/homeassistant/homeassistant/components/thinkingcleaner/sensor.py
          #   name: sensor
          #   subPath: sensor.py
          # - mountPath: /usr/src/homeassistant/homeassistant/components/thinkingcleaner/switch.py
          #   name: switch
          #   subPath: switch.py
      volumes:
        - name: config-volume
          emptyDir: {}
        - name: hass-config
          persistentVolumeClaim: 
            claimName: hass-data
        - name: hass-secrets
          secret:
            secretName: hass-secrets
            items:
              - key: secrets.yaml
                path: secrets.yaml
              - key: webostv.conf
                path: webostv.conf
        # - name: sensor
        #   configMap:
        #     name: sensor
        #     items:
        #       - key: sensor.py
        #         path: sensor.py
        # - name: switch
        #   configMap:
        #     name: switch
        #     items:
        #       - key: switch.py
        #         path: switch.py
status: {}
