50-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hass
  name: hass
spec:
  loadBalancerIP: 10.0.2.232
  ports:
  - port: 8123
    protocol: TCP
    targetPort: 80
  selector:
    app: hass
  type: LoadBalancer
status:
  loadBalancer: {}
