ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hass
  namespace: hass
spec:
  rules:
  - host: home.mansm.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hass
          servicePort: 80
